# fscmp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml
src/: args.rs  file.rs  main.rs
